Select All in Multi Object Pose Mode Doesn't Respect Hide Select #71091

Closed
opened 2019-10-25 11:25:32 +02:00 by Bun ny · 8 comments

System Information
Operating system: Windows 7 x64
Graphics card: NVIDIA GeForce GTX 580

Blender Version
Broken: 2.80

Short description of error
With multiple objects in Pose Mode, Select All selects bones belonging to objects which have the Hide Select flag set.

Exact steps for others to reproduce the error
Create two armatures, put both into Pose Mode, set Hide Select on one of the armatures via the Outliner. Attempt to select a single bone in the hidden armature with a mouse click (unable to select, as expected), use 'A' to Select All (bones in the hidden Armature are selected).

**System Information** Operating system: Windows 7 x64 Graphics card: NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.80 **Short description of error** With multiple objects in Pose Mode, Select All selects bones belonging to objects which have the Hide Select flag set. **Exact steps for others to reproduce the error** Create two armatures, put both into Pose Mode, set Hide Select on one of the armatures via the Outliner. Attempt to select a single bone in the hidden armature with a mouse click (unable to select, as expected), use 'A' to Select All (bones in the hidden Armature are selected).
Author

Added subscriber: @bunny

Added subscriber: @bunny
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

For multi-object editing this is also the case for other selection tools [box select tool and click picking respect the object hide_select, circle & lasso dont...]
multi-object editing this is also the case for other selection operators [select invert...]
(This is not only the case for multi-object editing though, this already fails with a single armature. if it was already slelected before)
2.79 also has the same issue.

Individual bones hide_select is respected, but the Armature object's isnt... (it is debatable whether this should be done, but it should be consistent across all selection operators -- viewport select pick and the others... see above)

Can confirm. For multi-object editing this is also the case for other selection tools [box select tool and click picking respect the object `hide_select`, circle & lasso dont...] multi-object editing this is also the case for other selection operators [select invert...] (This is not only the case for multi-object editing though, this already fails with a single armature. if it was already slelected before) 2.79 also has the same issue. Individual bones `hide_select` is respected, but the Armature object's isnt... (it is debatable whether this should be done, but it should be consistent across all selection operators -- viewport select pick and the others... see above)

Added subscribers: @ideasman42, @dr.sybren

Added subscribers: @ideasman42, @dr.sybren
Campbell Barton was assigned by Sybren A. Stüvel 2020-01-14 10:47:52 +01:00

This looks like a bug to me. Assigning to @ideasman42 as he implemented multi-object editing.

This looks like a bug to me. Assigning to @ideasman42 as he implemented multi-object editing.

This issue was referenced by df36e1c5dd

This issue was referenced by df36e1c5dd3c5843bcdc58a7021c6defc25d56ad

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71091
No description provided.