Fix T71091: Object restrict selection conflicts with pose selection

Support pose bone selection when the object has hide_select enabled.

This is consistent with how all other modes work.